@startuml

title __VAR's Class Diagram__\n

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Agente {
          + cantidad : int
          + nombre : String
          + Agente()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      enum destinotipo {
        ALALMACEN1
        ALALMACEN2
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Almacen {
          + nombre : String
          + Almacen()
          + Almacen()
          + Almacen()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Base {
          + objetivo : String
          + Base()
          + Base()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Cofre {
          + inv : int
          + inv_cacao : int
          + inv_huevo : int
          + inv_leche : int
          + inv_trigo : int
          + nombre : String
          + pos : Location
          + Cofre()
          + Cofre()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Escena {
          + camino : List<Vector>
          + caminoAlm1 : List<Vector>
          + caminoAlm2 : List<Vector>
          + vecAlmacen1 : Vector
          + vecAlmacen2 : Vector
          + vecBaseNPC : Vector
          + vecBasePlayer : Vector
          + getCofre()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.MaterialModelo {
          {static} + equivale()
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      enum tipo {
        CACAO
        GALLETA
        HUEVO
        LECHE
        PAN
        PASTEL
        TRIGO
      }
    }
  }
  

  namespace uoc.tfm.vmejia.speedrun {
    namespace var {
      class uoc.tfm.vmejia.speedrun.var.Receta {
          + ingr_cacao : int
          + ingr_huevo : int
          + ingr_leche : int
          + ingr_trigo : int
          + nombre : String
          + Receta()
          + Receta()
      }
    }
  }
  

  uoc.tfm.vmejia.speedrun.var.Agente o-- uoc.tfm.vmejia.speedrun.var.Cofre : bolsa
  uoc.tfm.vmejia.speedrun.var.Agente o-- uoc.tfm.vmejia.speedrun.var.Agente.destinotipo : destino
  uoc.tfm.vmejia.speedrun.var.Agente o-- uoc.tfm.vmejia.speedrun.var.MaterialModelo.tipo : material
  uoc.tfm.vmejia.speedrun.var.Agente o-- uoc.tfm.vmejia.speedrun.var.MaterialModelo.tipo : producto
  uoc.tfm.vmejia.speedrun.var.Agente +-down- uoc.tfm.vmejia.speedrun.var.Agente.destinotipo
  uoc.tfm.vmejia.speedrun.var.Almacen o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofre
  uoc.tfm.vmejia.speedrun.var.Base o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofregalleta
  uoc.tfm.vmejia.speedrun.var.Base o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofrepan
  uoc.tfm.vmejia.speedrun.var.Base o-- uoc.tfm.vmejia.speedrun.var.Cofre : cofrepastel
  uoc.tfm.vmejia.speedrun.var.Cofre o-- uoc.tfm.vmejia.speedrun.var.Receta : receta
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Agente : agente
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Almacen : almacenDer
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Almacen : almacenIzq
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Base : baseNPC
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Base : basePlayer
  uoc.tfm.vmejia.speedrun.var.Escena o-- uoc.tfm.vmejia.speedrun.var.Agente : jugador
  uoc.tfm.vmejia.speedrun.var.MaterialModelo +-down- uoc.tfm.vmejia.speedrun.var.MaterialModelo.tipo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
